# ProyectoFinGrado

./: .clang-format  .gitignore  CMakeLists.txt  README.md  linux-dependencies.txt
include/: AnimatedSprite.h  ScreenManager.h  UI.h
src/: AnimatedSprite.cpp  ScreenManager.cpp  UI.cpp  main.cpp
src/Screens/: Team.cpp  Team.h  Title.cpp  Title.h
